--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+*{
+  box-sizing:border-box;
+  margin:0;
+  padding:0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App{
+  min-height:100vh;
+  display: flex;
+  background-color: burlywood;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.quote{
+  margin:auto;
+  width:100%;
+  max-width:400px;
+  min-height: 180px;
+  padding: 30px;
+  background:#333;
+  border-radius: 4px;
+  box-shadow: 4px 4px 1px rgba(0,0,0,0.5);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
-.App-link {
-  color: #61dafb;
+p{
+  color: #fff;
+  font-size:17px;
+  word-wrap: break-word;
+}
+p:last-of-type{
+  margin: 10px 0;
+}
+button{
+  border: none;
+  outline:none;
+  margin-right:12px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn{
+  background: #6b68ff;
+  color:#fff;
+  width:80px;
+  padding:7px 0;
+  font-size: 14px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 700ms ease-in-out;
+}
+.btn:hover{
+  background-color: #5a57ec;
 }
